--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -222,8 +222,13 @@ async function initializeConversation() {
 
                 messageElement.style.visibility = "hidden"; // Mensagem inicial será exibida após o clique
 
+                // Inicializa o botão de fala e configura o evento apenas uma vez
                 if (!speakButton.hasAttribute('data-initialized')) {
                     speakButton.setAttribute('data-initialized', 'true');
+
+                    // Mostra e fala a mensagem inicial ao carregar a página
+                    messageElement.style.visibility = "visible";
+                    speak(data.response);
 
                     speakButton.addEventListener("click", () => {
                         if (speakButton.innerText === "Press to Start") {
@@ -236,10 +241,9 @@ async function initializeConversation() {
                     });
                 }
             } catch (error) {
-               console.error("Error initializing conversation:", error);
-               messageElement.innerText = "An unexpected error occurred. Try again later.";
-               speakButton.disabled = true;
-                messageElement.innerText = "Error initializing conversation. Please refresh and try again.";
+                console.error("Error initializing conversation:", error);
+                messageElement.innerText = "An unexpected error occurred. Try again later.";
+                speakButton.disabled = true;
                 messageElement.style.visibility = "visible";
             }
         } else {
