--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -211,18 +211,21 @@ async function initializeConversation() {
             const unit = urlParams.get('unit') || 'Unit1';
 
             try {
+                // Chama a API `/api/start` para iniciar a conversa
                 const response = await fetch(`/api/start?uid=${userId}&level=${level}&unit=${unit}`);
                 if (!response.ok) throw new Error("Failed to initialize conversation.");
 
                 const data = await response.json();
                 console.log("Server Response:", data);
 
+                // Atualiza o histórico e exibe a mensagem inicial
                 chatHistory = data.chatHistory || [];
                 messageElement.innerText = data.response;
 
-                messageElement.style.visibility = "hidden"; // Mensagem inicial será exibida após o clique
+                // Esconde a mensagem inicial até que o usuário clique no botão
+                messageElement.style.visibility = "hidden";
 
-                // Inicializa o botão de fala e configura o evento apenas uma vez
+                // Inicializa o botão de fala apenas uma vez
                 if (!speakButton.hasAttribute('data-initialized')) {
                     speakButton.setAttribute('data-initialized', 'true');
 
@@ -231,6 +234,7 @@ async function initializeConversation() {
                     speak(data.response);
 
                     speakButton.addEventListener("click", () => {
+                        // Alterna entre iniciar fala ou reconhecimento de voz
                         if (speakButton.innerText === "Press to Start") {
                             messageElement.style.visibility = "visible";
                             speak(data.response); // Fala a mensagem inicial
@@ -241,12 +245,14 @@ async function initializeConversation() {
                     });
                 }
             } catch (error) {
+                // Trata erros de inicialização
                 console.error("Error initializing conversation:", error);
-                messageElement.innerText = "An unexpected error occurred. Try again later.";
+                messageElement.innerText = "Failed to initialize conversation. Please try again later.";
                 speakButton.disabled = true;
                 messageElement.style.visibility = "visible";
             }
         } else {
+            // Exibe mensagem para usuários não autenticados
             console.warn("User is not logged in.");
             messageElement.innerText = "Please log in to start the conversation.";
             messageElement.style.visibility = "visible";
