--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -236,8 +236,10 @@ async function initializeConversation() {
                     });
                 }
             } catch (error) {
-                console.error("Error initializing conversation:", error);
-                messageElement.innerText = "Error initializing conversation. Try again.";
+               console.error("Error initializing conversation:", error);
+               messageElement.innerText = "An unexpected error occurred. Try again later.";
+               speakButton.disabled = true;
+                messageElement.innerText = "Error initializing conversation. Please refresh and try again.";
                 messageElement.style.visibility = "visible";
             }
         } else {
