--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -172,6 +172,10 @@ function setupSpeechRecognition() {
         const userSpeech = event.results[0][0].transcript;
         console.log("User speech:", userSpeech);
 
+ // Exibe o texto capturado da fala do usuário no elemento de mensagem
+    messageElement.style.visibility = "visible";
+    messageElement.innerText = `You said: "${userSpeech}"`; // Exibe a fala capturada
+
         if (!userId) {
             alert("User ID is missing. Please log in again.");
             return;
