--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -123,8 +123,24 @@
             robotImg.src = ROBOT_STATIC;
         }
 
+        // Verifica suporte ao inglês americano no sintetizador de voz
+        function checkVoiceSupport() {
+            const synth = window.speechSynthesis;
+            const voices = synth.getVoices();
+            const enUSVoice = voices.find(voice => voice.lang === "en-US");
+
+            if (!enUSVoice) {
+                alert("English (US) voice is not available on your browser. Please install it to use this feature.");
+                return false;
+            }
+
+            return true;
+        }
+
         // Síntese de voz
         function speak(text, rate = 0.8) {
+            if (!checkVoiceSupport()) return;
+
             const synth = window.speechSynthesis;
             const utterance = new SpeechSynthesisUtterance(text);
             utterance.lang = "en-US";
@@ -266,4 +282,7 @@ window.onload = () => {
 };
     </script>
 </body>
-</html>                                                     
+</html>
+
+
+           
