--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -264,7 +264,7 @@ async function setupSpeechRecognition() {
         }
     };
 
-   recognition.onresult = async (event) => {
+  recognition.onresult = async (event) => {
     const userSpeech = event.results[0][0].transcript;
     console.log("User speech:", userSpeech);
 
@@ -304,7 +304,7 @@ async function setupSpeechRecognition() {
         console.error("Erro ao se comunicar com o servidor:", error);
         messageElement.innerText = "Erro ao se comunicar com o servidor.";
     }
-};
+}; // Fecha a função corretamente
 
 async function initializeConversation() {
     firebase.auth().onAuthStateChanged(async (user) => {
