--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -344,14 +344,13 @@ async function initializeConversation() {
                 messageElement.innerText = data.response;
 
                 messageElement.style.visibility = "hidden"; // Mensagem inicial será exibida após o clique
-
-             if (!speakButton.hasAttribute('data-initialized')) {
+if (!speakButton.hasAttribute('data-initialized')) {
     speakButton.setAttribute('data-initialized', 'true');
 
     speakButton.addEventListener("click", () => {
         if (speakButton.innerText === "Press to Start") {
             messageElement.style.visibility = "visible";
-            speak(chatHistory[0]?.content || "Let's start the conversation!"); // Mensagem inicial
+            speak(chatHistory[0]?.content || "Let's start the conversation!");
             speakButton.innerText = "Press to Speak";
         } else {
             try {
